添加菜单路由地址和名称的校验规则